--- a/Priyosaj.Api/appsettings.Development.json
+++ b/Priyosaj.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DBConnectionString": "Data source=priyosaj.db;BinaryGUID=False",
+    "PostgresConnection": "Server=localhost; Port=5432;User Id=appuser; Password=secret; Database=priyosaj"
   }
 }
