--- a/Priyosaj.Api/appsettings.Development.json
+++ b/Priyosaj.Api/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "ConnectionStrings": {
     "DBConnectionString": "Data source=priyosaj.db;BinaryGUID=False",
-    "PostgresConnection": "Server=localhost; Port=5432;User Id=appuser; Password=secret; Database=priyosaj"
+    "PostgresConnection": "Server=localhost; Port=5432;User Id=appuser; Password=secret; Database=priyosaj",
+    "Redis": "localhost"
   }
 }
