--- a/Priyosaj.Business/Priyosaj.Business.csproj
+++ b/Priyosaj.Business/Priyosaj.Business.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
+    <PackageReference Include="StackExchange.Redis" Version="2.2.88" />
   </ItemGroup>
 
 </Project>
