--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,24 @@
 version: '3'
 services:
 
-  # redis:
-  #   image: redis:latest
-  #   ports:
-  #     - 6379:6379
-  #   command: ["redis-server", "--appendonly", "yes"]
-  #   volumes:
-  #     - redis-data:/data
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
+    command: [ "redis-server", "--appendonly", "yes" ]
+    volumes:
+      - redis-data:/data
 
-  # redis-commander:
-  #   image: rediscommander/redis-commander:latest
-  #   environment:
-  #     - REDIS_HOSTS=local:redis:6379
-  #     - HTTP_USER=root
-  #     - HTTP_PASSWORD=secret
-  #   ports:
-  #     - 8081:8081
-  #   depends_on:
-  #     - redis
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+      - HTTP_USER=root
+      - HTTP_PASSWORD=secret
+    ports:
+      - 8081:8081
+    depends_on:
+      - redis
 
   db:
     image: postgres
@@ -26,7 +26,7 @@ services:
     environment:
       POSTGRES_PASSWORD: secret
       POSTGRES_USER: appuser
-    ports: 
+    ports:
       - 5432:5432
 
   adminer:
@@ -34,9 +34,8 @@ services:
     restart: always
     ports:
       - 8080:8080
-
   # dotnet:
   #   image: mcr.microsoft.com/dotnet/runtime:5.0
-    
+
 volumes:
   redis-data:
