Identity Authentication with JWT

--- a/Priyosaj.Api/appsettings.Development.json
+++ b/Priyosaj.Api/appsettings.Development.json
@@ -2,12 +2,17 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "ConnectionStrings": {
     "DBConnectionString": "Data source=priyosaj.db;BinaryGUID=False",
     "PostgresConnection": "Server=localhost; Port=5432;User Id=appuser; Password=secret; Database=priyosaj",
+    "PostgresIdentityConnection": "Server=localhost; Port=5432;User Id=appuser; Password=secret; Database=priyosajIdentity",
     "Redis": "localhost"
+  },
+  "Token": {
+    "Key": "Super Secret Key",
+    "Issuer": "https://localhost:5001"
   }
 }
