--- a/Priyosaj.Api/appsettings.Development.json
+++ b/Priyosaj.Api/appsettings.Development.json
@@ -9,7 +9,7 @@
     "DBConnectionString": "Data source=priyosaj.db;BinaryGUID=False",
     "PostgresConnection": "Server=localhost; Port=5432;User Id=appuser; Password=secret; Database=priyosaj",
     "PostgresIdentityConnection": "Server=localhost; Port=5432;User Id=appuser; Password=secret; Database=priyosajIdentity",
-    "Redis": "localhost"
+    "Redis": "localhost:4320"
   },
   "Token": {
     "Key": "Super Secret Key",
