--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,14 +29,14 @@ services:
     ports:
       - 5432:5432
 
-  mssqlDB:
-    image: "mcr.microsoft.com/mssql/server"
-    restart: always
-    environment:
-      SA_PASSWORD: "Your_password123"
-      ACCEPT_EULA: "Y"
-    ports:
-      - 1433:1433
+  # mssqlDB:
+  #   image: "mcr.microsoft.com/mssql/server"
+  #   restart: always
+  #   environment:
+  #     SA_PASSWORD: "Your_password123"
+  #     ACCEPT_EULA: "Y"
+  #   ports:
+  #     - 1433:1433
 
   adminer:
     image: adminer
