--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
   redis:
     image: redis:latest
-    restart: always
+    # restart: always
     ports:
       - 4320:6379
     command: [ "redis-server", "--appendonly", "yes" ]
@@ -24,7 +24,7 @@ services:
 
   db:
     image: postgres
-    restart: always
+    # restart: always
     environment:
       POSTGRES_PASSWORD: secret
       POSTGRES_USER: appuser
