EmailModel created & DemoEmail Service implemented

--- a/Priyosaj.Api/appsettings.Development.json
+++ b/Priyosaj.Api/appsettings.Development.json
@@ -14,5 +14,11 @@
   "Token": {
     "Key": "Super Secret Key",
     "Issuer": "https://localhost:5001"
+  },
+  "SMTPConnection": {
+    "Host": "smtp.mailgun.org",
+    "Port": 587,
+    "UserName": "postmaster@sandboxd035b7f2b1e644c9805cd53029b99988.mailgun.org",
+    "Password": "4027da9f7256c347c909bb115906b1ee-4f207195-3587ed32"
   }
 }
