--- a/Priyosaj.Service/Priyosaj.Service.csproj
+++ b/Priyosaj.Service/Priyosaj.Service.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.16.0" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.16.0" />
     </ItemGroup>
