--- a/Priyosaj.Service/Priyosaj.Service.csproj
+++ b/Priyosaj.Service/Priyosaj.Service.csproj
@@ -17,4 +17,8 @@
       <ProjectReference Include="..\Priyosaj.Data\Priyosaj.Data.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Interfaces" />
+    </ItemGroup>
+
 </Project>
