--- a/Priyosaj.Data/Priyosaj.Data.csproj
+++ b/Priyosaj.Data/Priyosaj.Data.csproj
@@ -15,4 +15,8 @@
         <PackageReference Include="StackExchange.Redis" Version="2.2.88" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
+
 </Project>
