--- a/Priyosaj.Core/Priyosaj.Core.csproj
+++ b/Priyosaj.Core/Priyosaj.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MailKit" Version="3.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.8" />
   </ItemGroup>
 
 </Project>
